# Modern-CPP-Meta-Template-Programming

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
.cache/clangd/index/: enable_if.cpp.3BE20D72468F1484.idx  enable_if.cpp.BBCA97511C1687AE.idx  main.cpp.3C94211B566F3E9F.idx
GMP/: CMakeLists.txt
GMP/Definition/: CMakeLists.txt  main.cpp
GMP/callables/: CMakeLists.txt  main.cc
GMP/class-template/: CMakeLists.txt  main.cc
GMP/compiler-time/: CMakeLists.txt  main.cc
GMP/forward/: CMakeLists.txt  main.cc
GMP/func-template/: CMakeLists.txt  main.cc
GMP/headerFile/: CMakeLists.txt  header.cc  main.cc
GMP/headerFile/include/: header.hpp
GMP/no-type-param-template/: CMakeLists.txt  main.cc
GMP/typename/: CMakeLists.txt  main.cc
GMP/valElseRefer/: CMakeLists.txt  main.cc
GMP/variadic/: CMakeLists.txt  main.cc
MCPP/: CMakeLists.txt
MCPP/item19/: CMakeLists.txt  enable_if.cpp
item19/: enable_if.cpp
