add_subdirectory(./headerFile)
file(GLOB_RECURSE GMP_SRCS *.cc)

foreach(GMP_SRC ${GMP_SRCS})
    get_filename_component(GMP_SRC_DIR ${GMP_SRC} DIRECTORY)
    string(REGEX REPLACE ".*/(.*)" "\\1" CURRENT_FOLDER_ABSOLUTE ${GMP_SRC_DIR})
    if(NOT( "${CURRENT_FOLDER_ABSOLUTE}" STREQUAL "headerFile" ))
        add_executable(${CURRENT_FOLDER_ABSOLUTE} ${GMP_SRC})
    endif()
endforeach()
